--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,11 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
     "cra-template-redux": "2.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -11,6 +13,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.2",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
